# somethingsoff

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json
.github/workflows/: publish-crates.yml  rust-ci.yml
benches/: log_benchmarks.rs
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/skills/somethingsoff/: SKILL.md
docs/: CONTRACT.md
proptest-regressions/: schema.txt
src/: config.rs  drain.rs  error.rs  lib.rs  main.rs  mask.rs  output.rs  pii.rs  schema.rs
src/cmd/: claude.rs  claude_hook.rs  errors.rs  get.rs  health.rs  index_cmd.rs  ingest.rs  learn.rs  mod.rs  patterns.rs  schema.rs  search.rs  stats.rs  tap.rs  watch.rs
src/index/: aggregator.rs  builder.rs  mod.rs  searcher.rs  upsert.rs
src/parser/: coalesce.rs  detector.rs  json.rs  learn.rs  log_format.rs  mod.rs  parsers.rs  stacktrace.rs
src/parser/parsers/: apache.rs  go_logrus.rs  log4j.rs  logfmt.rs  python.rs  syslog.rs
src/sync/: discover.rs  lock.rs  mod.rs  state.rs  tail.rs
tests/: aggregation.rs  attributes.rs  autosync.rs  claude_hook.rs  claude_install.rs  contract.rs  deduplication.rs  ingest_search.rs  learn.rs  patterns.rs  phase0_foundation.rs  serve_watch.rs  tap.rs
